Added Assignment 01 HTML file
Add Assignment 01: Semantic HTML (Top 5 Anime List)

--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
                 <h2>Assignments</h2>
                 <ul>
                     <li>
-                        <a href="example-assignment-00/">
-                            Example Assignment 00
+                        <a href="assignment-01/">
+                            Assignment 01: Semantic HTML
                         </a>
                     </li>
-                    <li><a href="">Assignment 01</a></li>
                     <li><a href="">Assignment 02</a></li>
                     <li><a href="">Assignment 03</a></li>
                 </ul>
