Week 3 Exercise 1: Personal card with CSS
Complete Week 3 Exercise 1: Create personal card with CSS styling and homepage link

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
                 <h2>Exercises</h2>
                 <ul>
                     <li>
-                        <a href="exercise-01/">Exercise 01</a>
+                        <a href="week-03-exercise-01/">Week 03 Exercise 01: Box Model Practice</a>
                     </li>
-                    <li><a href="">Exercise 02</a></li>
-                    <li><a href="">Exercise 03</a></li>
                 </ul>
             </section>
 
