--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li>
                         <a href="week-03-exercise-01/">Week 03 Exercise 01: Box Model Practice</a>
                     </li>
+                    <li>
+                        <a href="week-04-exercise-01/">Week 04 Exercise 01: Dev Tools Vandalism</a>
+                    </li>
                 </ul>
             </section>
 
