Added anime collection page and design.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <li>
                         <a href="week-04-exercise-01/">Week 04 Exercise 01: Dev Tools Vandalism</a>
                     </li>
+                    <li>
+                        <a href="week-04-exercise-02/">Week 04 Exercise 02: My Collection</a>
+                    </li>
                 </ul>
             </section>
 
