Add Week 05 Interactive Buttons

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <li>
                         <a href="week-04-exercise-02/">Week 04 Exercise 02: My Collection</a>
                     </li>
+                    <li>
+                        <a href="week-05-exercise-01/">Week 05 Exercise 01: Interactive Buttons</a>
+                    </li>
                 </ul>
             </section>
 
