Add project-01 basic structure

--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                 <h2>Projects</h2>
                 <ul>
                     <li>
-                        <a href="example-project-00/">Example Project 00</a>
+                        <a href="project-01/">Project 01: Personal Landing Page</a>
                     </li>
-                    <li><a href="">Project 01</a></li>
-                    <li><a href="">Project 02</a></li>
                 </ul>
             </section>
 
