Add link to Week 06 Exercise 01

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li>
                         <a href="week-05-exercise-01/">Week 05 Exercise 01: Interactive Buttons</a>
                     </li>
+                    <li>
+                        <a href="./week-06-exercise-01/">Week 06 Exercise 01: Navigation Lab</a>
+                    </li>
                 </ul>
             </section>
 
